--- a/src/.classpath
+++ b/src/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="D:/GIT/FusionSimulife/simulife-display.jar"/>
+	<classpathentry kind="lib" path="C:/GIT/FusionSimul/simulife-display.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
